game server logic added